k8s/produzione/testws-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testws-deployment
  labels:
    app: testws
spec:
  replicas: 0
  selector:
    matchLabels:
      app: testws
  template:
    metadata:
      labels:
        app: testws
    spec:
      containers:
        - name: testws
          image: image-registry.openshift-image-registry.svc:5000/wso2-prod/testws:1.0.0
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /testws/actuator/health/liveness
              port: 8080
            failureThreshold: 3
            successThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /testws/actuator/health/readiness
              port: 8080
            failureThreshold: 3
            successThreshold: 1
            initialDelaySeconds: 5
            periodSeconds: 10
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /home/app/config
              name: application-config
      volumes:
        - configMap:
            defaultMode: 420
            name: testws-configmap
          name: application-config
