k8s/produzione/traceapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traceapp-service
spec:
  selector:
    app: traceapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
