k8s/produzione/testws-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: testws
  name: testws-route
spec:
  host: testws.apps.os4.insiel.it
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: Service
    name: testws-service
    weight: 100
  wildcardPolicy: None
